Further vast improvements

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
       <!-- Filter Buttons -->
    <div style="text-align:center;">
-      <a><button>Site News</button></a>
+      <a><button>Site Nudes</button></a>
       <a><button>Changelogs</button></a>
       <a><button>Community Highlights</button></a>
    </div>
